--- a/assets/manifest_zh.json
+++ b/assets/manifest_zh.json
@@ -92,6 +92,11 @@
             }
         },
         {
+            "name": "填充类型转为非零",
+            "identifier": "fill_type_to_non_zero",
+            "script": "fill_type_to_non_zero.js"
+        },
+        {
             "name": "参数设置",
             "identifier": "preferences",
             "script": "preferences.js"
@@ -150,6 +155,8 @@
             "view_shape_drawable_from_selected_layer",
             "view_vector_drawable_code",
             "-",
+            "fill_type_to_non_zero",
+            "-",
             "preferences",
             {
                 "title": "帮助",
@@ -171,7 +178,7 @@
     "identifier": "com.ashung.hung.android_res_export",
     "compatibleVersion": 3,
     "bundleVersion": 1,
-    "version": "4.0.12",
+    "version": "4.1.0",
     "disableCocoaScriptPreprocessor": true,
     "appcast": "https://raw.githubusercontent.com//master/.appcast.xml",
     "author": "Ashung Hung",
