--- a/src/manifest.json
+++ b/src/manifest.json
@@ -92,6 +92,11 @@
             }
         },
         {
+            "name": "Change Fill Type to Non-Zero",
+            "identifier": "fill_type_to_non_zero",
+            "script": "fill_type_to_non_zero.js"
+        },
+        {
             "name": "Preferences",
             "identifier": "preferences",
             "script": "preferences.js"
@@ -144,6 +149,8 @@
             "view_color_code_from_selected_layers",
             "view_shape_drawable_from_selected_layer",
             "view_vector_drawable_code",
+            "-",
+            "fill_type_to_non_zero",
             "-",
             "preferences",
             {
